<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="409dp"
        android:layout_height="392dp"
        android:paddingLeft="30dp"
        android:paddingTop="25dp"
        android:paddingRight="30dp"
        android:paddingBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/num7"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/round_button"
            android:text="@string/num7"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/num8"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginEnd="15dp"
            android:background="@drawable/round_button"
            android:text="@string/num8"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/num9"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginEnd="15dp"
            android:background="@drawable/round_button"
            android:text="@string/num9"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/add"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginEnd="15dp"
            android:background="@drawable/round_button"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="3"
            app:layout_row="0" />

        <Button
            android:id="@+id/num4"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/round_button"
            android:text="@string/num4"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/num5"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginEnd="15dp"
            android:background="@drawable/round_button"
            android:text="@string/num5"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/num6"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginEnd="15dp"
            android:background="@drawable/round_button"
            android:text="@string/num6"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/sub"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginEnd="15dp"
            android:background="@drawable/round_button"
            android:text="@string/sub"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="3"
            app:layout_row="1" />

        <Button
            android:id="@+id/num1"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/round_button"
            android:text="@string/num1"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/num2"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginEnd="15dp"
            android:background="@drawable/round_button"
            android:text="@string/num2"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/num3"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginEnd="15dp"
            android:background="@drawable/round_button"
            android:text="@string/num3"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/mul"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginEnd="15dp"
            android:background="@drawable/round_button"
            android:text="@string/mul"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/clear"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginEnd="15dp"
            android:background="@drawable/round_button_res"
            android:foregroundTint="@color/white"
            android:text="@string/clear"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/num0"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginEnd="15dp"
            android:background="@drawable/round_button"
            android:text="@string/num0"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/equal"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginEnd="15dp"
            android:background="@drawable/round_button"
            android:text="@string/equal"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/div"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginEnd="15dp"
            android:background="@drawable/round_button"
            android:text="@string/div"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="3"
            app:layout_row="3" />
    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="159dp"
        android:layout_height="42dp"
        android:fontFamily="monospace"
        android:foregroundTint="@color/black"
        android:text="@string/calculator"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.149" />

    <TextView
        android:id="@+id/display"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="end"
        android:text="3+5"
        android:textSize="40dp"
        android:paddingRight="30dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/res"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="end"
        android:paddingRight="30dp"
        android:text="= 5"
        android:textColor="@color/white"
        android:textSize="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display" />

</androidx.constraintlayout.widget.ConstraintLayout>